assignment2 - Huy/src/main/CSlang/parser/CSlangParser.py
# Generated from main/CSlang/parser/CSlang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<-'", "'break'", "'true'", "'string'", 
                     "'var'", "'func'", "'continue'", "'false'", "'return'", 
                     "'self'", "'if'", "'int'", "'null'", "'new'", "'else'", 
                     "'float'", "'class'", "'void'", "'for'", "'bool'", 
                     "'constructor'", "'const'", "'+'", "'-'", "'*'", "'/'", 
                     "'\\'", "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "':='", "'^'", "'%'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BREAK", "TRUE", "STRING", 
                      "VAR", "FUNC", "CONTINUE", "FALSE", "RETURN", "SELF", 
                      "IF", "INT", "NULL", "NEW", "ELSE", "FLOAT", "CLASS", 
                      "VOID", "FOR", "BOOL", "CONSTRUCTOR", "CONST", "PLUS", 
                      "MINUS", "MULTIPLE", "DIVIDE_FLOAT", "DIVIDE_INT", 
                      "CHAMTHAN", "AND", "OR", "EQUAL", "DECLARE", "DIFFER", 
                      "SMOL", "SMOL_EQUAL", "BIG", "BIG_EQUAL", "ASSIGN", 
                      "CONCAT", "MOD", "LB", "RB", "LS", "RS", "DOT", "CM", 
                      "SM", "CL", "LC", "RC", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "IDENTIFIER", "AT_ID", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRLIT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declarelist = 1
    RULE_class_declare = 2
    RULE_list_of_member = 3
    RULE_member = 4
    RULE_attribute = 5
    RULE_attribute1 = 6
    RULE_attribute1const = 7
    RULE_attribute1var = 8
    RULE_attributedecl = 9
    RULE_attribute2 = 10
    RULE_list_of_attribute = 11
    RULE_list_of_a = 12
    RULE_method = 13
    RULE_list_of_param = 14
    RULE_list_of_param1 = 15
    RULE_primee = 16
    RULE_param_declare = 17
    RULE_list_of_param2 = 18
    RULE_primeme = 19
    RULE_list_of_identifier = 20
    RULE_primy = 21
    RULE_constructor = 22
    RULE_typee = 23
    RULE_typev = 24
    RULE_arr_type = 25
    RULE_class_type = 26
    RULE_typeorarrtype = 27
    RULE_list_of_exp = 28
    RULE_primu = 29
    RULE_exp = 30
    RULE_exp1 = 31
    RULE_exp2 = 32
    RULE_exp3 = 33
    RULE_exp4 = 34
    RULE_exp5 = 35
    RULE_exp6 = 36
    RULE_exp7 = 37
    RULE_exp8 = 38
    RULE_exp9 = 39
    RULE_exp10 = 40
    RULE_exp11 = 41
    RULE_exp12 = 42
    RULE_literal = 43
    RULE_var_const_statement = 44
    RULE_ass_statement = 45
    RULE_assex_statement = 46
    RULE_lhs = 47
    RULE_if_statement = 48
    RULE_for_statement = 49
    RULE_break_statement = 50
    RULE_continue_statement = 51
    RULE_return_statement = 52
    RULE_method_invocation_statement = 53
    RULE_instance_method_invocation = 54
    RULE_static_method_invocation = 55
    RULE_block_statement = 56
    RULE_list_of_statement = 57
    RULE_statement = 58
    RULE_xdd = 59
    RULE_superX = 60
    RULE_arrlit = 61
    RULE_arr = 62

    ruleNames =  [ "program", "class_declarelist", "class_declare", "list_of_member", 
                   "member", "attribute", "attribute1", "attribute1const", 
                   "attribute1var", "attributedecl", "attribute2", "list_of_attribute", 
                   "list_of_a", "method", "list_of_param", "list_of_param1", 
                   "primee", "param_declare", "list_of_param2", "primeme", 
                   "list_of_identifier", "primy", "constructor", "typee", 
                   "typev", "arr_type", "class_type", "typeorarrtype", "list_of_exp", 
                   "primu", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "exp11", "exp12", 
                   "literal", "var_const_statement", "ass_statement", "assex_statement", 
                   "lhs", "if_statement", "for_statement", "break_statement", 
                   "continue_statement", "return_statement", "method_invocation_statement", 
                   "instance_method_invocation", "static_method_invocation", 
                   "block_statement", "list_of_statement", "statement", 
                   "xdd", "superX", "arrlit", "arr" ]

    EOF = Token.EOF
    T__0=1
    BREAK=2
    TRUE=3
    STRING=4
    VAR=5
    FUNC=6
    CONTINUE=7
    FALSE=8
    RETURN=9
    SELF=10
    IF=11
    INT=12
    NULL=13
    NEW=14
    ELSE=15
    FLOAT=16
    CLASS=17
    VOID=18
    FOR=19
    BOOL=20
    CONSTRUCTOR=21
    CONST=22
    PLUS=23
    MINUS=24
    MULTIPLE=25
    DIVIDE_FLOAT=26
    DIVIDE_INT=27
    CHAMTHAN=28
    AND=29
    OR=30
    EQUAL=31
    DECLARE=32
    DIFFER=33
    SMOL=34
    SMOL_EQUAL=35
    BIG=36
    BIG_EQUAL=37
    ASSIGN=38
    CONCAT=39
    MOD=40
    LB=41
    RB=42
    LS=43
    RS=44
    DOT=45
    CM=46
    SM=47
    CL=48
    LC=49
    RC=50
    BLOCK_COMMENT=51
    LINE_COMMENT=52
    IDENTIFIER=53
    AT_ID=54
    INTLIT=55
    FLOATLIT=56
    BOOLLIT=57
    STRLIT=58
    WS=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declarelist(self):
            return self.getTypedRuleContext(CSlangParser.Class_declarelistContext,0)


        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.class_declarelist()
            self.state = 127
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declare(self):
            return self.getTypedRuleContext(CSlangParser.Class_declareContext,0)


        def class_declarelist(self):
            return self.getTypedRuleContext(CSlangParser.Class_declarelistContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_declarelist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declarelist" ):
                return visitor.visitClass_declarelist(self)
            else:
                return visitor.visitChildren(self)




    def class_declarelist(self):

        localctx = CSlangParser.Class_declarelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declarelist)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.CLASS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.class_declare()
                self.state = 130
                self.class_declarelist()
                pass
            elif token in [CSlangParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def superX(self):
            return self.getTypedRuleContext(CSlangParser.SuperXContext,0)


        def IDENTIFIER(self):
            return self.getToken(CSlangParser.IDENTIFIER, 0)

        def LC(self):
            return self.getToken(CSlangParser.LC, 0)

        def list_of_member(self):
            return self.getTypedRuleContext(CSlangParser.List_of_memberContext,0)


        def RC(self):
            return self.getToken(CSlangParser.RC, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_class_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declare" ):
                return visitor.visitClass_declare(self)
            else:
                return visitor.visitChildren(self)




    def class_declare(self):

        localctx = CSlangParser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(CSlangParser.CLASS)
            self.state = 136
            self.superX()
            self.state = 137
            self.match(CSlangParser.IDENTIFIER)
            self.state = 138
            self.match(CSlangParser.LC)
            self.state = 139
            self.list_of_member()
            self.state = 140
            self.match(CSlangParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(CSlangParser.MemberContext,0)


        def list_of_member(self):
            return self.getTypedRuleContext(CSlangParser.List_of_memberContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_list_of_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_member" ):
                return visitor.visitList_of_member(self)
            else:
                return visitor.visitChildren(self)




    def list_of_member(self):

        localctx = CSlangParser.List_of_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_list_of_member)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.VAR, CSlangParser.FUNC, CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.member()
                self.state = 143
                self.list_of_member()
                pass
            elif token in [CSlangParser.RC]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(CSlangParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(CSlangParser.MethodContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = CSlangParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.VAR, CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.attribute()
                pass
            elif token in [CSlangParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute1(self):
            return self.getTypedRuleContext(CSlangParser.Attribute1Context,0)


        def attribute2(self):
            return self.getTypedRuleContext(CSlangParser.Attribute2Context,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = CSlangParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.attribute1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.attribute2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute1const(self):
            return self.getTypedRuleContext(CSlangParser.Attribute1constContext,0)


        def attribute1var(self):
            return self.getTypedRuleContext(CSlangParser.Attribute1varContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute1" ):
                return visitor.visitAttribute1(self)
            else:
                return visitor.visitChildren(self)




    def attribute1(self):

        localctx = CSlangParser.Attribute1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute1)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSlangParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.attribute1const()
                pass
            elif token in [CSlangParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.attribute1var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute1constContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def attributedecl(self):
            return self.getTypedRuleContext(CSlangParser.AttributedeclContext,0)


        def SM(self):
            return self.getToken(CSlangParser.SM, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attribute1const

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute1const" ):
                return visitor.visitAttribute1const(self)
            else:
                return visitor.visitChildren(self)




    def attribute1const(self):

        localctx = CSlangParser.Attribute1constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute1const)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(CSlangParser.CONST)
            self.state = 161
            self.attributedecl()
            self.state = 162
            self.match(CSlangParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute1varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CSlangParser.VAR, 0)

        def attributedecl(self):
            return self.getTypedRuleContext(CSlangParser.AttributedeclContext,0)


        def SM(self):
            return self.getToken(CSlangParser.SM, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attribute1var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute1var" ):
                return visitor.visitAttribute1var(self)
            else:
                return visitor.visitChildren(self)




    def attribute1var(self):

        localctx = CSlangParser.Attribute1varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute1var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(CSlangParser.VAR)
            self.state = 165
            self.attributedecl()
            self.state = 166
            self.match(CSlangParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_attribute(self):
            return self.getTypedRuleContext(CSlangParser.List_of_attributeContext,0)


        def CL(self):
            return self.getToken(CSlangParser.CL, 0)

        def typeorarrtype(self):
            return self.getTypedRuleContext(CSlangParser.TypeorarrtypeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attributedecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributedecl" ):
                return visitor.visitAttributedecl(self)
            else:
                return visitor.visitChildren(self)




    def attributedecl(self):

        localctx = CSlangParser.AttributedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attributedecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.list_of_attribute()
            self.state = 169
            self.match(CSlangParser.CL)
            self.state = 170
            self.typeorarrtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_a(self):
            return self.getTypedRuleContext(CSlangParser.List_of_aContext,0)


        def SM(self):
            return self.getToken(CSlangParser.SM, 0)

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def VAR(self):
            return self.getToken(CSlangParser.VAR, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attribute2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute2" ):
                return visitor.visitAttribute2(self)
            else:
                return visitor.visitChildren(self)




    def attribute2(self):

        localctx = CSlangParser.Attribute2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attribute2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            _la = self._input.LA(1)
            if not(_la==CSlangParser.VAR or _la==CSlangParser.CONST):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 173
            self.list_of_a()
            self.state = 174
            self.match(CSlangParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_attributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xdd(self):
            return self.getTypedRuleContext(CSlangParser.XddContext,0)


        def CM(self):
            return self.getToken(CSlangParser.CM, 0)

        def list_of_attribute(self):
            return self.getTypedRuleContext(CSlangParser.List_of_attributeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_list_of_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_attribute" ):
                return visitor.visitList_of_attribute(self)
            else:
                return visitor.visitChildren(self)




    def list_of_attribute(self):

        localctx = CSlangParser.List_of_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_list_of_attribute)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.xdd()
                self.state = 177
                self.match(CSlangParser.CM)
                self.state = 178
                self.list_of_attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.xdd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_aContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xdd(self):
            return self.getTypedRuleContext(CSlangParser.XddContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.CM)
            else:
                return self.getToken(CSlangParser.CM, i)

        def list_of_a(self):
            return self.getTypedRuleContext(CSlangParser.List_of_aContext,0)


        def exp(self):
            return self.getTypedRuleContext(CSlangParser.ExpContext,0)


        def CL(self):
            return self.getToken(CSlangParser.CL, 0)

        def typeorarrtype(self):
            return self.getTypedRuleContext(CSlangParser.TypeorarrtypeContext,0)


        def DECLARE(self):
            return self.getToken(CSlangParser.DECLARE, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_list_of_a

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_of_a" ):
                return visitor.visitList_of_a(self)
            else:
                return visitor.visitChildren(self)




    def list_of_a(self):

        localctx = CSlangParser.List_of_aContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_list_of_a)
        try:
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.xdd()
                self.state = 184
                self.match(CSlangParser.CM)
                self.state = 185
                self.list_of_a()
                self.state = 186
                self.match(CSlangParser.CM)
                self.state = 187
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.xdd()
                self.state = 190
                self.match(CSlangParser.CL)
                self.state = 191
                self.typeorarrtype()
                self.state = 192
                self.match(CSlangParser.DECLARE)
                self.state = 193
                self.exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def xdd(self):
            return self.getTypedRuleContext(CSlangParser.XddContext,0)


        def LB(self):
            return self.getToken(CSlangParser.LB, 0)

        def list_of_param(self):
            return self.getTypedRuleContext(CSlangParser.List_of_paramContext,0)


        def RB(self):
            return self.getToken(CSlangParser.RB, 0)

        def CL(self):
            return self.getToken(CSlangParser.CL, 0)

        def typev(self):
            return self.getTypedRuleContext(CSlangParser.TypevContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(CSlangParser.Block_statementContext,0)


        def constructor(self):
            return self.getTypedRuleContext(CSlangParser.ConstructorContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = CSlangParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_method)
        try:
            self.state = 207
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                self.match(CSlangParser.FUNC)
                self.state = 198
                self.xdd()
                self.state = 199
                self.match(CSlangParser.LB)
                self.state = 200
                self.list_of_param()
                self.state = 201
                self.match(CSlangParser.RB)
                self.state = 202
                self.match(CSlangParser.CL)
                self.state = 203
                self.typev()
                self.state = 204
                self.block_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.constructor()
                pass

